--- a/NotABadPlayer/app/src/main/res/layout/item_album_track.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_album_track.xml
@@ -15,10 +15,9 @@
             android:id="@+id/trackNum"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textAppearance="@style/TrackNumber"
             android:gravity="center"
-            android:textSize="30dp"
-            android:singleLine="true"
-            android:textColor="@color/colorAlbumItemTextSub"/>
+            android:singleLine="true"/>
     </LinearLayout>
     
     <Space
@@ -35,17 +34,15 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18dp"
-            android:textColor="@color/colorAlbumItemText"
+            android:textAppearance="@style/ListItemText"
             android:singleLine="true"/>
 
         <TextView
             android:id="@+id/duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15dp"
-            android:singleLine="true"
-            android:textColor="@color/colorAlbumItemTextSub"/>
+            android:textAppearance="@style/ListItemSubtext"
+            android:singleLine="true" />
         
     </LinearLayout>
 
