--- a/NotABadPlayer/app/src/main/res/layout/layout_settings_appearance.xml
+++ b/NotABadPlayer/app/src/main/res/layout/layout_settings_appearance.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="10dp"
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp">
 
@@ -11,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/settings_appearance"
         android:singleLine="true"
-        android:textColor="@color/colorTextPrimary"
+        android:textColor="@color/primaryText"
         android:textStyle="bold"
         android:textSize="25dp"
         android:textAlignment="center"/>
@@ -26,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="@string/settings_general_color"
             android:singleLine="true"
-            android:textColor="@color/colorTextPrimary"/>
+            android:textColor="@color/primaryText"/>
         <Space
             android:layout_width="1dp"
             android:layout_height="wrap_content"
@@ -48,7 +51,7 @@
             android:layout_height="wrap_content"
             android:text="@string/settings_album_sorting"
             android:singleLine="true"
-            android:textColor="@color/colorTextPrimary"/>
+            android:textColor="@color/primaryText"/>
         <Space
             android:layout_width="1dp"
             android:layout_height="wrap_content"
@@ -70,7 +73,7 @@
             android:layout_height="wrap_content"
             android:text="@string/settings_track_sorting"
             android:singleLine="true"
-            android:textColor="@color/colorTextPrimary"/>
+            android:textColor="@color/primaryText"/>
         <Space
             android:layout_width="1dp"
             android:layout_height="wrap_content"
@@ -92,7 +95,7 @@
             android:layout_height="wrap_content"
             android:text="@string/settings_volume_bar"
             android:singleLine="true"
-            android:textColor="@color/colorTextPrimary"/>
+            android:textColor="@color/primaryText"/>
         <Space
             android:layout_width="1dp"
             android:layout_height="wrap_content"
