--- a/NotABadPlayer/app/src/main/res/values-v21/styles.xml
+++ b/NotABadPlayer/app/src/main/res/values-v21/styles.xml
@@ -3,10 +3,6 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar"
         xmlns:tools="http://schemas.android.com/tools">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorTextPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:statusBarColor">@color/colorOverlayBackground</item>
+        <item name="android:statusBarColor">@color/statusBarColor</item>
     </style>
 </resources>
