--- a/NotABadPlayer/app/src/main/res/layout/activity_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/activity_player.xml
@@ -2,13 +2,13 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/playerBackground">
     
     <LinearLayout
         android:id="@+id/player"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="15dp"
         android:orientation="horizontal"/>
 
 </android.support.constraint.ConstraintLayout>
