--- a/NotABadPlayer/app/src/main/res/layout/item_album.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_album.xml
@@ -16,8 +16,8 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/ListItemText"
         android:lines="2"
-        android:textColor="@color/colorAlbumItemText"
         android:gravity="center_horizontal"/>
 
 </LinearLayout>
