--- a/NotABadPlayer/app/src/main/res/layout/item_playlist.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_playlist.xml
@@ -20,15 +20,13 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/colorPlaylistsItemText"
+            android:textAppearance="@style/ListItemText"
             android:singleLine="true"/>
         <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:textColor="@color/colorPlaylistsItemSubText"
+            android:textAppearance="@style/ListItemSubtext"
             android:singleLine="true" />
     </LinearLayout>
     
@@ -38,6 +36,7 @@
         android:layout_height="64dp" 
         android:visibility="gone"
         android:src="@drawable/remove"
+        android:tint="@color/genericButtonBackground"
         android:background="@null"/>
 
 </LinearLayout>
