--- a/NotABadPlayer/app/src/main/res/layout/item_playlist_album_expanded.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_playlist_album_expanded.xml
@@ -19,8 +19,7 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/colorPlaylistsEditItemText"
+            android:textAppearance="@style/ListItemText"
             android:singleLine="true"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
