--- a/NotABadPlayer/app/src/main/res/layout/item_playlist_album_expanded_track.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_playlist_album_expanded_track.xml
@@ -11,15 +11,13 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14dp"
-        android:textColor="@color/colorPlaylistsEditItemText"
+        android:textAppearance="@style/ListItemSubtext"
         android:singleLine="true"/>
     <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="10dp"
-        android:textColor="@color/colorPlaylistsEditItemSubText"
+        android:textAppearance="@style/ListItemSubtext"
         android:singleLine="true" />
 
 </LinearLayout>
