--- a/NotABadPlayer/app/src/main/res/layout/item_playlist_track.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_playlist_track.xml
@@ -19,15 +19,13 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textColor="@color/colorPlaylistsEditItemText"
+            android:textAppearance="@style/ListItemText"
             android:singleLine="true"/>
         <TextView
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:textColor="@color/colorPlaylistsEditItemText"
+            android:textAppearance="@style/ListItemSubtext"
             android:singleLine="true" />
     </LinearLayout>
 
