--- a/NotABadPlayer/app/src/main/res/layout/layout_settings_reset.xml
+++ b/NotABadPlayer/app/src/main/res/layout/layout_settings_reset.xml
@@ -3,27 +3,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="10dp"
     android:orientation="vertical">
     
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/settings_reset"
+        android:textAppearance="@style/TitleText"
         android:singleLine="true"
-        android:textColor="@color/colorTextPrimary"
-        android:textStyle="bold"
-        android:textSize="25dp"
         android:textAlignment="center"/>
     
     <Button
         android:id="@+id/resetButton"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
+        android:layout_gravity="center_horizontal"
         android:text="@string/settings_reset_button"
-        android:textColor="@color/colorSettingsKeybindItemSubText"
+        android:textAppearance="@style/SettingsButtonText"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:background="@drawable/settings_item_border"
-        android:layout_gravity="center_horizontal"/>
+        android:background="@drawable/settings_item_border"/>
     
 </LinearLayout>
